--- a/template/package.json
+++ b/template/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "vue": "^2.5.2"{{#router}},
     "vue-router": "^3.0.1"{{/router}}{{#vuex}},
-    "vuex": "^2.5.0"{{/vuex}}
+    "vuex": "^2.5.0"{{/vuex}},
+    "axios": "^0.16.2",
+    "fastclick": "^1.0.6",
+    "vue-lazyload": "^1.2.6",
+    "vue-awesome-swiper": "^3.1.0"
   },
   "devDependencies": {
     {{#lint}}
@@ -37,7 +41,9 @@
     {{#sass}}
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
+    {{#sass_global}}
     "sass-resources-loader": "^1.3.3",
+    {{/sass_global}}
     {{/sass}}
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
@@ -78,7 +84,7 @@
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">= 6.0.0",
+    "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
   "browserslist": [
